Using the local filter for the currency disclaimer message

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -328,5 +328,8 @@
     },
     "history_results": {
       "message":"Besuchte Webseiten"
+    },
+    "no_legal_disclaimer": {
+      "message": "Ohne Gewähr"
     }
 }
