--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -322,5 +322,26 @@
     },
     "history_results": {
       "message":"Visited Sites"
+    },
+    "cliqz_slogan_H1": {
+        "message": "STOP SEARCHING. START SURFING."
+    },
+    "cliqz_slogan_H2": {
+        "message": "Fast, private, direct. See results as you type."
+    },
+    "cliqz_common_questions":{
+        "message": "Common Questions"
+    },
+    "cliqz_give_feedback":{
+        "message": "Give Feedback"
+    },
+    "cliqz_about_us":{
+        "message": "About Us"
+    },
+    "cliqz_jobs":{
+        "message": "Jobs"
+    },
+    "cliqz_privacy":{
+        "message": "Privacy"
     }
 }
