--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -347,5 +347,8 @@
     },
     "no_legal_disclaimer": {
       "message": "Ohne Gewähr"
+    },
+    "views": {
+        "message": "Aufrufe"
     }
 }
