--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -320,6 +320,9 @@
     "history_results": {
       "message":"Besuchte Webseiten"
     },
+    "history_results_cluster": {
+      "message":"Meine Top-Seiten"
+    },
     "adultInfo": {
         "message": "Nicht jugendfreie Inhalte wurden automatisch blockiert."
     },
