--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -6,7 +6,7 @@
         "message": "What is CLIQZ? <-- try it yourself, eg: 'weather new york'"
     },
     "settings":{
-        "message": "Settings"
+        "message": "SETTINGS"
     },
     "btnPrivacy":{
         "message": "Privacy Policy"
@@ -25,6 +25,12 @@
     },
     "btnShare":{
         "message": "CLIQZ Share"
+    },
+    "btnSafeSearch":{
+        "message": "Take part"
+    },
+    "btnSafeSearchDesc":{
+        "message": "What is this?"
     },
     "urlBarLastSearch":{
         "message":"↵  "
