Better message handling + add warning for users outside germany and ability to disable cliqz core

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -397,5 +397,8 @@
     },
     "disable-cliqz": {
       "message": "Disable Cliqz"
+    },
+    "btnActivateCliqz": {
+      "message": "Activate Cliqz"
     }
 }
