--- a/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/fr/cliqz.json
@@ -33,7 +33,7 @@
         "message": "we don't have great results this time."
     },
     "noResultMessage":{
-        "message":"press enter to search on ..., or try one of these:."
+        "message":"press enter to search on ..., or try one of these:"
     },
     "noResults": {
         "message":"Aucun résultat"
