--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -39,7 +39,7 @@
         "message": "Dieses Mal haben wir leider keinen guten Vorschlag."
     },
     "noResultMessage":{
-        "message": "Versuche es mit ,Enter' bei ... oder per Klick auf:"
+        "message": "Versuche es mit ,Enter' bei {} oder per Klick auf:"
     },
     "noResults": {
         "message":"Keine Ergebnisse"
