--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -1,4 +1,7 @@
 {
+    "openInNewTab":{
+        "message": "{} (open in new tab)"
+    },
     "whatIsCliqz":{
         "message": "What is CLIQZ?"
     },
