fix margin bug in CommicEZ. Thuy

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -394,5 +394,8 @@
     },
     "cliqz_stock_minutes_ago": {
        "message": "Minuten früher"
+    },
+    "publish_date": {
+        "message": "Veröffentlichungsdatum"
     }
 }
