--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -397,5 +397,8 @@
     },
     "btnActivateCliqz": {
       "message": "Activate Cliqz"
+    },
+    "publish_date": {
+        "message": "Publish date"
     }
 }
