--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -400,5 +400,11 @@
     },
     "publish_date": {
         "message": "Publish date"
+    },
+    "Click anywhere to copy":{
+        "message": "Click anywhere to copy"
+    },
+    "Copied":{
+        "message": "Copied"
     }
 }
