--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -50,7 +50,7 @@
     "moreResults":{
         "message":"more ..."
     },
-    "numResults":{
+    "customSearch":{
         "message":"Search <b><i>{}</i></b> on {}"
     },
     "peoplePositionAt":{
