changed German translation for history clustering: "Meine-Top Seiten" -> "Besuchte Webseiten"

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -327,7 +327,7 @@
       "message":"Besuchte Webseiten"
     },
     "history_results_cluster": {
-      "message":"Meine Top-Seiten"
+      "message":"Besuchte Webseiten"
     },
     "adultInfo": {
         "message": "Anstößige Inhalte wurden automatisch blockiert."
