changed German translations for most-visited web sites (following up on user feedback reported by Britta)

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -321,7 +321,7 @@
       "message":"Besuchte Webseiten"
     },
     "history_results_cluster": {
-      "message":"Meine Top-Seiten"
+      "message":"Besuchte Webseiten"
     },
     "adultInfo": {
         "message": "Anstößige Inhalte wurden automatisch blockiert."
@@ -411,9 +411,9 @@
         "message": "Nachricht schließen"
     },
     "topSitesMessage":{
-        "message": "Wähle eine Deiner meistbesuchten Seiten hier, <br/> oder fang' einfach an oben in der Leiste zu tippen um woanders hinzugehen!"
+        "message": "Wähle eine Deiner meist-besuchten Webseiten hier, <br/> oder fang' einfach an oben in der Leiste zu tippen um woanders hinzugehen!"
     },
     "topSitesTitle":{
-        "message": "Meine Top-Seiten"
+        "message": "Meine meist-besuchten Webseiten"
     }
 }
