some more polishing of German translations

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -324,10 +324,10 @@
         "message": "Nationalität"
     },
     "history_results": {
-      "message":"Besuchte Webseiten"
+      "message":"Besuchte Seiten"
     },
     "history_results_cluster": {
-      "message":"Besuchte Webseiten"
+      "message":"Besuchte Seiten"
     },
     "adultInfo": {
         "message": "Anstößige Inhalte wurden automatisch blockiert."
