localize news toggle

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -415,5 +415,11 @@
     },
     "updateDismiss":{
         "message": "Nachricht schließen"
+    },
+    "newsToggleLatest":{
+        "message": "Aktuell"
+    },
+    "newsToggleTrends":{
+        "message": "Trends"
     }
 }
