--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -424,5 +424,11 @@
     },
     "updateDismiss":{
         "message": "Dismiss"
+    },
+    "newsToggleLatest":{
+        "message": "Latest"
+    },
+    "newsToggleTrends":{
+        "message": "Trending"
     }
 }
