Updated EntityStock to show the real stock time instead of always saying '20 min ago'. fixes cliqz/bug-tracker#500

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -393,10 +393,7 @@
         "message": "Marktkapit."
     },
     "cliqz_stock_pe_ratio": {
-        "message": "P/E ratio(ttm)"
-    },
-    "cliqz_stock_minutes_ago": {
-       "message": "Minuten früher"
+        "message": "KGV (ttm)"
     },
     "publish_date": {
         "message": "Veröffentlichungsdatum"
