avoid using unsanitized strings in custom search

--- a/cliqz@cliqz.com/chrome/locale/__fr/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/__fr/cliqz.json
@@ -35,8 +35,11 @@
     "moreResults":{
         "message":"plus ..."
     },
-    "customSearch":{
-        "message":"Recherche <b><i>{}</i></b> sur {}"
+    "search":{
+        "message":"recherche"
+    },
+    "on":{
+        "message":"sur"
     },
     "peoplePositionAt":{
         "message":"à"
