--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -56,8 +56,11 @@
     "moreResults":{
         "message":"more ..."
     },
-    "customSearch":{
-        "message":"Search <b><i>{}</i></b> on {}"
+    "search":{
+        "message":"search"
+    },
+    "on":{
+        "message":"on"
     },
     "peoplePositionAt":{
         "message":"at"
