new german update message

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -408,7 +408,7 @@
         "message": "kopiert"
     },
     "updateMessage":{
-        "message": "CLIQZ ist jetzt noch schöner, noch direkter, noch sicherer."
+        "message": "Mit dem neuen CLIQZ for Firefox klickst du dich noch direkter, schneller und smarter durchs Web."
     },
     "updatePage":{
         "message": "Mehr erfahren"
