new german update message 2

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -408,7 +408,7 @@
         "message": "kopiert"
     },
     "updateMessage":{
-        "message": "Mit dem neuen CLIQZ for Firefox klickst du dich noch direkter, schneller und smarter durchs Web."
+        "message": "Mit CLIQZ surfst du ab jetzt noch schneller, noch direkter und noch smarter."
     },
     "updatePage":{
         "message": "Mehr erfahren"
