--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -135,7 +135,7 @@
         "message":"Gib Deine Suche oder Webadresse einfach hier ein..."
     },
     "onMsgInstalled":{
-        "message":"Installation geglückt! Ab jetzt surfst Du mit CLIQZ!"
+        "message":"Installation erfolgreich! Ab jetzt surfst Du mit CLIQZ!"
     },
     "onMsgThankYou":{
         "message":"Danke, dass Du CLIQZ installiert hast!"
