changing main message on page after demo ran through to invite users to try it out

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -137,6 +137,9 @@
     "onMsgInstalled":{
         "message":"Installation erfolgreich! Ab jetzt surfst Du mit CLIQZ!"
     },
+    "onMsgDemoDone":{
+        "message":"Probier CLIQZ gleich mal aus!"
+    },
     "onMsgThankYou":{
         "message":"Danke, dass Du CLIQZ installiert hast!"
     },
