Added blog button to the cliqz EZ

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -416,6 +416,9 @@
     "cliqz_privacy": {
         "message": "Datenschutz"
     },
+    "cliqz_blog": {
+        "message": "Blog"
+    },
     "no_legal_disclaimer": {
       "message": "Ohne Gewähr"
     },
