--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -419,6 +419,9 @@
     "cliqz_privacy":{
         "message": "Privacy"
     },
+    "cliqz_blog": {
+        "message": "Blog"
+    },
     "cliqz_stock_open": {
         "message": "Open"
     },
