--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -9,7 +9,7 @@
         "message": "Ganze Tabelle"
     },
     "LocalTimeGermany":{
-        "message": "Alle Zeitangaben: Deutschland Zeit"
+        "message": "Alle Zeitangaben: Mitteleuropäische (Sommer-) Zeit"
     },
     "Terminal":{
         "message": "Terminal"
