--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -9,7 +9,7 @@
         "message": "Full Table"
     },
     "LocalTimeGermany":{
-        "message": "Showing Germany time"
+        "message": "All times: Central European (Summer) Time"
     },
     "Terminal":{
         "message": "Terminal"
