Extended tooltip for 'no-results' dropdown: showing "search using NAME"

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -71,6 +71,9 @@
     "search":{
         "message":"search"
     },
+    "searchUsing":{
+        "message":"search using"
+    },
     "on":{
         "message":"on"
     },
