--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -71,6 +71,9 @@
     "search":{
         "message":"suche"
     },
+    "searchUsing":{
+        "message":"Suche mit"
+    },
     "on":{
         "message":"auf"
     },
