showing callout with button to start tour below URL when on-boarding page is loaded—instead of having start button on web page

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -122,6 +122,9 @@
     "agoXYears":{
         "message":"vor {} Jaren"
     },
+    "onCalloutIntro":{
+        "message":"CLIQZ verwandelt die Adressleiste in Deinen persönlichen Assistenten durch's Web."
+    },
     "onButtonTryOut":{
         "message":"Surf los!"
     },
@@ -159,7 +162,7 @@
         "message":"Danke, dass Du CLIQZ installiert hast!"
     },
     "onMsgExplanation":{
-        "message":"CLIQZ for Firefox verwandelt Deine Adressleiste in Deinen persönlichen Assistenten durchs Web."
+        "message":"CLIQZ for Firefox verwandelt Deine Adressleiste in Deinen persönlichen Assistenten durch's Web."
     },
     "offRes_Cliqz":{
         "message":"CLIQZ"
