added English translations

--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -122,8 +122,17 @@
     "agoXYears":{
         "message":"{} years ago"
     },
+    "onCalloutIntro":{
+        "message":"All the CLIQZ action happens in your URL bar. Simply enter your search here."
+    },
+    "onCalloutIntroBtnStart":{
+        "message":"Take tour"
+    },
+    "onCalloutIntroBtnCancel":{
+        "message":"Close"
+    },
     "onButtonTryOut":{
-       "message":"Surf now!"
+       "message":"Take tour"
     },
     "onButtonCancel":{
        "message":"Cancel tour"
@@ -132,7 +141,7 @@
        "message":"Show me again"
     },
     "onCalloutTypeHere":{
-       "message":"All the CLIQZ action happens in your url bar. Simply enter your search or a webaddress here."
+       "message":"All the CLIQZ action happens in your URL bar. Simply enter your search or a webaddress here."
     },
     "onCalloutCliqzResults":{
        "message":"Website suggestions appear in the CLIQZ Menu as you type."
