changed wording in first callout

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -123,7 +123,7 @@
         "message":"vor {} Jahren"
     },
     "onCalloutIntro":{
-        "message":"CLIQZ funktioniert in deiner Adressleiste – gib Deine Suche einfach hier ein"
+        "message":"Hier ist Deine neue CLIQZ-Suchleiste"
     },
     "onCalloutIntroBtnStart":{
         "message":"Demo starten"
