--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -123,7 +123,7 @@
         "message":"{} years ago"
     },
     "onCalloutIntro":{
-        "message":"All the CLIQZ action happens in your URL bar. Simply enter your search here."
+        "message":"This is your new CLIQZ bar"
     },
     "onCalloutIntroBtnStart":{
         "message":"Take tour"
