UI for cooking rich data

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -1,4 +1,19 @@
 {
+    "CookingIntruct":{
+        "message": "Zubereitungsschritte"
+    },
+    "Ingredients":{
+        "message": "Zutaten"
+    },
+    "Reviews":{
+        "message": "Stimmen"
+    },
+    "Serves":{
+        "message": "Portionen"
+    },
+    "CookTime":{
+        "message": "Gesamtzeit: {} Minute"
+    },
     "KickerSponsor":{
         "message": "powered by kicker online"
     },
