remove fromRange locale

--- a/cliqz@cliqz.com/chrome/locale/de/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/de/cliqz.json
@@ -606,14 +606,11 @@
     "bus": {
         "message": "Bus"    
     },
-    "fromDestination": {
+    "from": {
         "message": "Von"    
     },
     "to": {
         "message": "nach"    
-    },
-    "fromRange": {
-        "message": "ab"    
     },
     "today": {
         "message": "Heute"    
