--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -614,14 +614,11 @@
     "bus": {
         "message": "Bus"    
     },
-    "fromDestination": {
+    "from": {
         "message": "From"    
     },
     "to": {
         "message": "to"    
-    },
-    "fromRange": {
-        "message": "from"    
     },
     "today": {
         "message": "Today"    
