--- a/cliqz@cliqz.com/chrome/locale/en/cliqz.json
+++ b/cliqz@cliqz.com/chrome/locale/en/cliqz.json
@@ -606,21 +606,30 @@
         "message":"Trending"
     },
     "plane": {
-        "message":"Plane"    
+        "message":"Plane"
     },
     "train": {
-        "message": "Train"    
+        "message": "Train"
     },
     "bus": {
-        "message": "Bus"    
+        "message": "Bus"
     },
     "from": {
-        "message": "From"    
+        "message": "From"
     },
     "to": {
-        "message": "to"    
+        "message": "to"
     },
     "today": {
-        "message": "Today"    
+        "message": "Today"
+    },
+    "myQuery": {
+        "message": "query"
+    },
+    "ytDynamicSearch": {
+        "message": "Did you know? You can type \"yt + query\" to get a preview of Youtube results for your search query"
+    },
+    "dismiss": {
+        "message": "Dismiss"
     }
 }
